--- a/battleunits/harmonizer_of_monsters_and_humans_rimuru_tempest.html
+++ b/battleunits/harmonizer_of_monsters_and_humans_rimuru_tempest.html
@@ -5,70 +5,64 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="[Harmonizer of Monsters and Humans] Rimuru Tempest Water/Magic">
 	<meta name="author" content="">
-	<title>Rimuru Tempest</title>
+	<title>[Harmonizer of Monsters and Humans] Rimuru Tempest</title>
 	<!-- Favicons -->
-	<link href="../../images/favicon.png" rel="icon">
-	<link href="../../images/apple-touch-icon.png" rel="apple-touch-icon">
+	<link href="../images/favicon.png" rel="icon">
+	<link href="../images/apple-touch-icon.png" rel="apple-touch-icon">
 	<!-- Bootstrap core CSS -->
-	<link href="../../lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	<link href="../lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<!-- Custom styles for this template -->
-	<link href="../../css/custom.css" rel="stylesheet">
+	<link href="../css/custom.css" rel="stylesheet">
 	<style type="text/css">
 		.nav-item.nav-link.active {
 			background-color: #212529;
 		}
 	</style>
-
-	<body class="darktheme">
-		<!-- Navigation -->
-		<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
-			<div class="container">
-				<a class="navbar-brand" href="../../index">Isekai Memories</a>
-				<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarResponsive">
-					<ul class="navbar-nav ml-auto">
-						<li class="nav-item">
-							<a class="nav-link" href="../../index">Home</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link active" href="../../characters">Characters</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="../../gamenews">Game News</a>
-						</li>
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">
-								Useful Information
-							</a>
-							<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-								<a class="dropdown-item whitetext" href="../../cooking">Cooking</a>
-								<a class="dropdown-item whitetext" href="../../tierlist">Tierlist</a>
-								<a class="dropdown-item whitetext" href="../../ccranking">CC Ranking</a>
-								<a class="dropdown-item whitetext" href="../../gears">Gears</a>
-								<a class="dropdown-item whitetext" href="../../skillfilter">Skill Filter</a>
-								<a class="dropdown-item whitetext" href="../../unique">List of Uniques</a>
-								<a class="dropdown-item whitetext" href="../../association">Association Bonuses</a>
-								<a class="dropdown-item whitetext" href="../../statuseffect">Status Effect</a>
-
-							</div>
-						</li>
-					</ul>
-				</div>
+</head>
+<body class="darktheme">
+	<!-- Navigation -->
+	<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
+		<div class="container">
+			<a class="navbar-brand" href="../index">Isekai Memories</a>
+			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarResponsive">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item">
+						<a class="nav-link" href="../index">Home</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link active" href="../characters">Battle Characters</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="../characters">Protection Characters</a>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">
+							Useful Information
+						</a>
+						<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+							<a class="dropdown-item whitetext" href="../cooking">Soul Converters</a>
+							<a class="dropdown-item whitetext" href="../tierlist">Protector Overview</a>
+						</div>
+					</li>
+				</ul>
 			</div>
-		</nav>
-	</nav>	<!-- Page Content -->
+		</div>
+	</nav>
+	<!-- /.End of Navigation -->
 	<div class="container">
-		<!-- Character Title & Icon -->
+		<!-- Character Name & Icon -->
 		<div class="row">
 			<div class="mt-3 mb-3 titlebox col-lg-2 col-12 text-center">
-				<img src="../../images/battleunits/rimuru/harmonizer_rimuru.png" class="pr-4 ml-1 ml-lg-3" loading="lazy">
+				<img src="../images/battleunits/harmonizer_of_monsters_and_humans_rimuru_tempest/portrait.png" class="pr-4 ml-1 ml-lg-3" loading="lazy">
 			</div>
 			<div class="col-lg-6 my-auto ml-4 ml-lg-n4">
 				<h5 class="whitetext"><b>&#91;Harmonizer of Monsters and Humans&#93;</b></h5><h5 class="whitetext"><b>Rimuru Tempest</b></h5>
 			</div>
 		</div>
+		<!-- /. End of Character Name & Icon -->
 		<!-- Content Row -->
 		<div class="row m-1">
 			<!-- Left Sidebar -->
@@ -78,17 +72,16 @@
 					<div class="list-group-item bg-dark">
 						<div class="row m-0">
 							<div class="col-6 whitetext mb-2 text-center" style="background-color: #2D323C"><h5 class="m-1">Rarity</h5></div>
-							<div class="col-6 text-center"><img class="pt-1" src="../../images/icons/5star.png" loading="lazy"></div>
+							<div class="col-6 text-center"><img class="pt-1" src="../images/icons/5star.png" loading="lazy"></div>
 
 							<div class="col-6 whitetext mb-2 text-center" style="background-color: #2D323C"><h5 class="m-1">Growth</h5></div>
 							<div class="col-6 text-center whitetext"><h5 class="m-1">Defense</h5></div>
 						</div>
 						<div class="row m-0 justify-content-center">
-							<div class="col-3 text-center mb-2"><img src="../../images/icons/attribute_water.png" loading="lazy"></div>
-							<div class="col-3 text-center mb-2"><img src="../../images/icons/weapon_sword.png" loading="lazy"></div>
-							<div class="col-3 text-center mb-2"><img src="../../images/icons/magic.png" loading="lazy"></div>
+							<div class="col-3 text-center mb-2"><img src="../images/icons/attribute_water.png" loading="lazy"></div>
+							<div class="col-3 text-center mb-2"><img src="../images/icons/weapon_sword.png" loading="lazy"></div>
+							<div class="col-3 text-center mb-2"><img src="../images/icons/magic.png" loading="lazy"></div>
 						</div>
-
 
 						<div class="row m-0">
 							<div class="col-12 whitetext mb-2 text-center" style="background-color: #2D323C"><h5 class="m-1">STATS (MAX)</h5></div>
@@ -108,7 +101,7 @@
 					</div>
 				</div>
 			</div>
-
+			<!-- /. End of Left Sidebar -->
 			<div class="col-lg-6 mb-4 mt-2 mt-lg-0 mx-lg-0 bg-dark rounded" style="margin-left: 15px; margin-right: 15px;">
 				<h2 class="whitetext border-bottom pb-2 mt-2"><b style="margin-left: -2px">Battle Skills (Lv.1)</b></h2>
 
@@ -116,7 +109,7 @@
 					<div class="pl-2 pl-lg-0" style="margin-top: 13px">
 						<div class="row m-0">
 							<div class="col-12 col-lg-3 text-center my-auto p-0">
-								<img src="../../images/battleunits/rimuru/harmonizer_rimuru_1.png" loading="lazy">
+								<img src="../images/battleunits/harmonizer_of_monsters_and_humans_rimuru_tempest/skill1.png" loading="lazy">
 							</div>
 							<div class="col-lg-9 my-auto px-lg-0 px-2">
 								<h5 class="mt-2"><b>Skill 1: Hydro Combat</b></h5>
@@ -128,36 +121,36 @@
 					<div class="pl-2 pl-lg-0" style="margin-top: 13px">
 						<div class="row m-0">
 							<div class="col-12 col-lg-3 text-center my-auto p-0">
-								<img src="../../images/battleunits/rimuru/harmonizer_rimuru_2.png" loading="lazy">
+								<img src="../images/battleunits/harmonizer_of_monsters_and_humans_rimuru_tempest/skill2.png" loading="lazy">
 							</div>
 							<div class="col-lg-9 my-auto px-lg-0 px-2">
 								<h5 class="mt-2"><b>Skill 2: Heal Assist</b></h5>
-								<p>Heals all allies' HP by <span style="color:#03DD08">15%</span>. Increases <a data-toggle="popover-hover" data-img="../../images/icons/soul_of_divine_protection.png"><span style="color:#3A8AFF">Soul of Divine Protection</span></a> damage until the end of battle by <span style="color:#03DD08">5%</span> (Max: <span style="color:#03DD08">100%</span>).</p>
+								<p>Heals all allies' HP by <span style="color:#03DD08">15%</span>.<br>Increases <a data-toggle="popover-hover" data-img="../images/icons/soul_of_divine_protection.png"><span style="color:#3A8AFF">Soul of Divine Protection</span></a> damage until the end of battle by <span style="color:#03DD08">5%</span> (Max: <span style="color:#03DD08">100%</span>).</p>
 							</div>
 						</div>
 					</div>
 				</div>
 
-				<h2 class="whitetext border-bottom" style="border-bottom-color: #1D2430;"><b>Secret Skill</b></h2>
+				<h2 class="whitetext border-bottom" style="border-bottom-color: #1D2430;"><b>Secret Skill (Lv.MAX)</b></h2>
 
 				<div class="row m-0 whitetext mb-3">
 					<div class="col-12 col-lg-3 text-center my-auto p-0">
-						<img src="../../images/battleunits/rimuru/harmonizer_rimuru_ult.png" loading="lazy">
+						<img src="../images/battleunits/harmonizer_of_monsters_and_humans_rimuru_tempest/ult.png" loading="lazy">
 					</div>
 					<div class="col-lg-9 my-auto px-lg-0 px-2">
 						<h5 class="mt-2"><b>Black Lightning</b></h5>
-						<p class="mb-0">Unleashes an all-target water magic attack for <span style="color:#03DD08">230/235/240/245/250/270%</span> normal damage.</p>
+						<p class="mb-0">Unleashes an all-target water magic attack for <span style="color:#03DD08">270%</span> normal damage.</p>
 					</div>
 				</div>
 
 				<h2 class="whitetext border-bottom" style="border-bottom-color: #1D2430;"><b>Traits</b></h2>
 
 				<div class="whitetext mb-2">
-					<h5 class="mt-2"><b>DEF UP (5★ Awaken x1)</b></h5>
-					<p>When affected by Critical Resistance UP, increases own DEF by 7% at start of turn (available in support formation).</p>
+					<h5 class="mt-2"><b>Effect - DEF UP (5★ Awaken x1)</b></h5>
+					<p>When affected by Critical Resistance UP, increases own DEF by <span style="color:#03DD08">7%</span> at start of turn (available in support formation).</p>
 
-					<h5 class="mt-2"><b>DEF UP (5★ Awaken x3)</b></h5>
-					<p class="mb-0">When affected by Critical Resistance UP, increases own DEF by 11% at start of turn (available in support formation).</p>
+					<h5 class="mt-2"><b>Effect - DEF UP (5★ Awaken x3)</b></h5>
+					<p class="mb-0">When affected by Critical Resistance UP, increases own DEF by <span style="color:#03DD08">11%</span> at start of turn (available in support formation).</p>
 				</div>
 
 			</div>
@@ -170,11 +163,11 @@
 
 						<div class="row m-0">
 							<div class="col-12 whitetext text-center mb-2 p-0"><b>Ocean Supply Corps Base</b></div>
-							<div class="col-6 text-center"><img src="../../images/icons/ocean_supply_corps_base.png" loading="lazy"></div>
+							<div class="col-6 text-center"><img src="../images/icons/ocean_supply_corps_base.png" loading="lazy"></div>
 							<div class="col-6 whitetext mb-2 text-center" style="background-color: #2D323C"><h5 class="mt-2">+30%</h5></div>
 
 							<div class="col-12 whitetext text-center mb-2"><b>Laboratory</b></div>
-							<div class="col-6 text-center"><img src="../../images/icons/laboratory.png" loading="lazy"></div>
+							<div class="col-6 text-center"><img src="../images/icons/laboratory.png" loading="lazy"></div>
 							<div class="col-6 whitetext mb-2 text-center" style="background-color: #2D323C"><h5 class="mt-2">+10%</h5></div>
 						</div>
 					</div>
@@ -190,8 +183,8 @@
 		<p class="m-0 text-center text-white">Isekai Memories Database is not affliated with or endorsed by Bandai Namco</a></p>
 	</footer>
 	<!-- Bootstrap core JavaScript -->
-	<script src="../../lib/jquery/jquery.min.js"></script>
-	<script src="../../lib/bootstrap/js/bootstrap.min.js"></script>
+	<script src="../lib/jquery/jquery.min.js"></script>
+	<script src="../lib/bootstrap/js/bootstrap.min.js"></script>
 	<script>
 		$('[data-toggle="popover-hover"]').popover({
 			html: true,
